--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,6 +1,6 @@
 body {
   height:100vh;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Chalkduster', fantasy;
 }
 
 .top-text{
@@ -39,8 +39,8 @@ body {
 }
 
 .top-text p {
-  font-size: 80px;
-  font-family: 'Roboto', sans-serif;
+  font-size: 70px;
+  font-family: 'Courier New', sans-serif;
 }
 
 .fixed-wrapper {
@@ -58,8 +58,8 @@ ul li a {
 }
 
 .title-logo{
-    height:24px;
-    width:24px;
+    height:48px;
+    width:48px;
     margin: 0px 12px 0px 2px;
     opacity: 0.4;
     filter: alpha(opacity=40);
@@ -193,7 +193,7 @@ ul li a {
   margin-bottom: 1em;
 }
 #terminal .message span a {
-  font-family: "Source Code Pro", monospace;
+  font-family: "Times New Roman", monospace;
   border-bottom: 1px dotted rgba(255, 255, 255, 0.75);
 }
 #terminal .message form input {
@@ -263,6 +263,6 @@ ul li a {
   }
 
   #terminal .terminal {
-    height: 400px;
+    height: 1600px;
   }
 }
