--- a/templates/base.html
+++ b/templates/base.html
@@ -41,10 +41,9 @@
 <div class="navbar-ul">
     <ul id="navbar-list" class="list-inline">
         <li><a class="navbar-ref" href="/">Home</a></li>
-        <li><a class="navbar-ref" href="/timeline">Timeline</a></li>
-        <li><a class="navbar-ref" href="/projects">Projects</a></li>
         <li><a class="navbar-ref" href="/experiences">Experiences</a></li>
-        <li><a class="navbar-ref" href="">Writing</a></li>
+        <li><a class="navbar-ref" href="/deeznuts">deeznuts</a></li>
+
     </ul>
 </div>
 {% block body %}
