--- a/templates/home.html
+++ b/templates/home.html
@@ -25,11 +25,11 @@
                             <a id="min" class="button" href="#"></a>
                             <a id="max" class="button" href="#"></a>
                         </div>
-                        <span class="title">oh-my-zsh</span>
+                        <span class="title">bash</span>
                     </div>
                     <div class="message">
-                        <span class='prompt'><span class='user'>crearo</span><span class="at">@</span><span
-                                class="path">/home/rish/</span>><span class="caret">$</span></span>
+                        <span class='prompt'><span class='user'>root</span><span class="at">@</span><span
+                                class="path">/home/ASriv98/</span>><span class="caret">$</span></span>
                         <span class="typed"></span>
                         <form>><span class="caret">$</span>&nbsp;<input type="text" name="response"></input></form>
                     </div>
@@ -39,58 +39,40 @@
     </div>
     <div class="wrapper scroll-wrapper">
         <div class="top-text">
-            <p class="text-title desktop-view">Rishabh</p>
-            <p class="text-title desktop-view">Bhardwaj</p>
-            <p class="text-title mobile-view">Rishabh Bhardwaj</p>
+            <p class="text-title desktop-view">Atul</p>
+            <p class="text-title desktop-view">Srivastava</p>
+            <p class="text-title mobile-view">Atul Srivastava</p>
             <div>
-                <a target="_blank" href="https://github.com/crearo">
+                <a target="_blank" href="https://github.com/ASriv98">
                     <img class="title-logo" src="static/images/github.svg">
                 </a>
-                <a target="_blank" href="https://www.linkedin.com/in/bhardwajrish/">
-                    <img class="title-logo" src="static/images/linkedin-logo.svg">
+                <a target="_blank" href="https://www.linkedin.com/in/ASriv98/">
+                    <img class="title-logo" src="static/images/Linkedin.svg">
+                </a>
+                <a target="_blank" href="https://www.youtube.com/channel/UCQLn20npsBkAHjiGnPOfv9Q">
+                    <img class="title-logo" src="static/images/YouTube.svg">
+                </a>
+                <a target="_blank" href="https://www.instagram.com/ASriv98/">
+                    <img class="title-logo" src="static/images/Instagram.svg">
+                </a>
+                <a target="_blank" href="https://www.twitter.com/ASriv98/">
+                    <img class="title-logo" src="static/images/Twitter.svg">
+                </a>
+                <a target="_blank" href="https://drive.google.com/file/d/1IXB6MEYxdcwMsKcBJ7A6i1zshqU5kBml/view?usp=sharing">
+                    <img class="title-logo" src="static/images/education.svg">
                 </a>
             </div>
         </div>
         <div class="middle-text">
-            <p class="text-content">I am a maker at heart; from developing challenging large-scale software to small
-                weekend hacks and proof of concept ideas to tinkering around with my Lego Mindstorms sets - I love to
-                build.</p>
+            <p class="text-content">I never really knew what I wanted to do with my life, and I still don't really know what to do, so my only logical solution is to keep doing something that makes me learn and question. Engineering and computer science has been a good place for me to explore my mind.  </p>
 	    <p class="text-content">
-		I work at Google Munich in the Android Platforms and Ecosystems team. I have a deep understanding of
-                the Android graphics and camera stack. I have worked on hard problems such as real time stabilization on
-                Android, and have created a graphics library for custom rendering to multiple surfaces, applying
-                filters, and streaming.</p>
+		I work at <a href="https://www.scitec.com/">SciTec Inc.</a> on instrumentation control technology. Our devices provide the ability to read and deploy light waves of different characteristics across the visible light spectrum.</p>
 
-            <p class="text-content">I studied computer science at <a href="http://www.daiict.ac.in/daiict/index.html">DA-IICT</a>.</p>
+            <p class="text-content">I studied Computer Engineering at <a href="https://www.ece.rutgers.edu/">Rutgers University</a>.</p>
 
-            <p class="text-content">One of my biggest side-projects is <a
-                    href="https://play.google.com/store/apps/details?id=rish.crearo.lifehacks&hl=en_IN">Lifehacks</a>,
-                an Android application I developed from scratch which now has over 750K installs. I designed the logo,
-                collated the content, structured the database and designed the REST API. I contribute to open source
-                occasionally - I've contributed heavily to
-                <a href="https://play.google.com/store/apps/details?id=nickrout.lenslauncher&hl=en_IN">Lens Launcher</a>,
-                an Android launcher with over 1 million installs, and have also open sourced a
-                personal project I developed during my university days for viewing
-                <a href="http://github.com/crearo/webmail">Zimbra Webmails on Android</a>.</p>
-
-            <p class="text-content">I have also co-authored a paper in the Conference of Data Sciences (CODS '17)
-                studying the role of temporal diversity in inferring social ties based on spatio-temporal data. (<a
-                        href="https://arxiv.org/abs/1611.03298">view paper here</a>).</p>
-
-            <p class="text-content">I've been learning to play the drums since Mar 2018, enjoy solo traveling and
-                <a href="http://bhardwajrish.blogspot.com">am an active blogger</a>, where I write about my work, travel
-                and side projects. I'm extremely enthusiastic about life, believe that life is too short to work on
-                things that don't interest you, and I'm always on the hunt for learning something new.</p>
-
-            <p class="text-content">You can find me on <a href="http://in.linkedin.com/in/bhardwajrish/">LinkedIn</a>,
-                or email me <a href="mailto:rish.extra@gmail.com?Subject=Hello%20Rish%20-from-website" target="_top">here</a>.
+            <p class="text-content">You can learn more about me here, <a href="http://in.linkedin.com/in/ASriv98/">LinkedIn</a>,
+                or email me <a href="mailto:atulsriv3@gmail.com?Subject=Hello%20Rish%20-from-website" target="_top">here</a>.
             </p>
-
-            <p class="text-content">Let's get in touch!</p>
-
-            <p class="text-content">Rishabh Bhardwaj</p>
-
-            <p class="text-content"><a href="timeline">For more about me, my timeline, read on here.</a></p>
 
             <br>
         </div>
